refactoring getRequiredByKeyStartWith