@@ -55,15 +55,34 @@ public interface KeyValueStore<V> {
     default Map.Entry<String, V> getRequired(String key) {
         return get(key)
                 .orElseThrow(() -> new NoSuchElementException(String.format(
-                        "Store %s. No key %s found", getClass().getName(), key
+                        "Store %s. No key %s found", getClass().getSimpleName(), key
                 )));
     }
 
     default Map.Entry<String, V> getRequiredByKeyStartWith(String stringKey) {
-        return CommonUtils.requireOne(
+        CommonUtils.MatchResult<String, Map.Entry<String, V>> matchResult = CommonUtils.matchBy(
                 getAll().entrySet(),
-                entry -> entry.getKey().startsWith(stringKey),
-                () -> String.format("Store %s", getClass().getName())
+                List.of(stringKey),
+                (criteria, entry) -> entry.getKey().startsWith(criteria)
+        );
+
+        if (!matchResult.notFound().isEmpty()) {
+            throw new NoSuchElementException(
+                    "Store %s. No items found for criteria: %s".formatted(getClass().getSimpleName(), stringKey)
+            );
+        }
+
+        if (matchResult.found().containsKey(stringKey) && matchResult.ambiguous().isEmpty()) {
+            return matchResult.found().get(stringKey);
+        }
+
+        List<Map.Entry<String, V>> matches = matchResult.ambiguous().get(stringKey);
+        int matchesCount = (matches != null) ? matches.size() : 0;
+
+        throw new IllegalStateException(
+                "Store %s. Ambiguous key criteria '%s'. Found %d matches".formatted(
+                        getClass().getSimpleName(), stringKey, matchesCount
+                )
         );
     }
 
